<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whatsapp_wallpaper_001"
    tools:context=".PaginaGestao">

    <TextView
        android:id="@+id/textViewGestao"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="58dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/gest_o_da_loja"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/textViewFuncionarios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewFuncionarios"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="93dp"
        android:text="@string/funcionarioss"
        android:textColor="#000000"
        android:textSize="16sp"
        android:typeface="serif"
        app:drawableLeftCompat="@drawable/ic_baseline_supervisor_account_24"
        app:layout_constraintBottom_toTopOf="@+id/textViewClientes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGestao" />

    <TextView
        android:id="@+id/textViewClientes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="93dp"
        android:text="@string/clientess"
        android:textColor="#000000"
        android:textSize="16sp"
        android:typeface="serif"
        app:drawableLeftCompat="@drawable/ic_baseline_supervisor_account_24"
        app:drawableStartCompat="@drawable/ic_baseline_person_24"
        app:layout_constraintBottom_toTopOf="@+id/textViewJogos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFuncionarios" />

    <TextView
        android:id="@+id/textViewJogos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="93dp"
        android:text="@string/jogoss"
        android:textColor="#000000"
        android:textSize="16sp"
        android:typeface="serif"
        app:drawableLeftCompat="@drawable/ic_baseline_games_24"
        app:layout_constraintBottom_toTopOf="@+id/textViewVendas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewClientes"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textViewVendas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="201dp"
        android:text="@string/vendass"
        android:textColor="#000000"
        android:textSize="16sp"
        android:typeface="serif"
        app:drawableLeftCompat="@drawable/ic_baseline_games_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewJogos" />

</androidx.constraintlayout.widget.ConstraintLayout>